tests/tests/ui/key_mixed_named_then_simple.stderr
error: cannot mix field names with `partition`/`local` syntax
 --> tests/ui/key_mixed_named_then_simple.rs:2:37
  |
2 | #[key(partition = name, local = id, extra)]
  |                                     ^^^^^
