tests/tests/ui/key_mixed_named_then_simple.rs
#[derive(toasty::Model)]
#[key(partition = name, local = id, extra)]
struct Widget {
    id: uuid::Uuid,
    name: String,
    extra: String,
}

fn main() {}
